src/components/Carousel.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");

body {
  text-align: center;
  margin: 0 auto;
  font-family: "Poppins", "sans-serif";
  background-color: antiquewhite;
}

@media screen and (max-width: 700px) {
  .leftCard {
    display: none;
  }

  .rightCard {
    display: none;
  }
}

.carousel-container {
  display: flex;
  flex-flow: column;
}

.avatars {
  border-radius: 50%;
  height: 100px;
  margin-top: -6em;
}

.cards {
  display: flex;
  width: 100%;
}

.card {
  margin: 5em 2em 0em;
  background-color: ivory;
  padding: 2em;
  width: 35%;
  height: 200px;
  flex: 1; /* each card is of equal size */
  box-shadow: 6px 6px 17px 1px rgba(0, 0, 0, 0.36);
  -webkit-box-shadow: 6px 6px 17px 1px rgba(0, 0, 0, 0.36);
}

.leftCard {
  margin-right: -15em;
  margin-top: 7em;
}

.rightCard {
  margin-left: -15em;
  margin-top: 7em;
}

.active {
  z-index: 1;
  height: 250px;
  background-image: url("../assets/quote.svg"), url("../assets/quote.svg");
  background-repeat: no-repeat;
  background-position-x: 0, right;
  background-position-y: 0, bottom;
  background-size: 50px;
  background-origin: content-box;
}

.arrow-container {
  margin-top: -6.5em;
  display: flex;
  justify-content: space-between;
}

.arrow {
  height: 3em;
}

.name {
  margin-top: 0.5em;
  margin-bottom: -0.2em;
}

p {
  padding: 0em 2.5em;
  overflow: hidden;
}

.tracker {
  display: flex;
  justify-content: center;
  height: 2.5em;
  margin-top: 1em;
}

.circle {
  transform: scale(0.3);
}

.viewAll {
  background-color: lightyellow;
  border: none;
  border-radius: 25px;
  height: 2em;
  width: 20%;
  font-weight: bold;
  margin: 2em auto;
  box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.36);
  -webkit-box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.36);
}

